[gd_scene load_steps=5 format=2]

[ext_resource path="res://shaders/outline.shader" type="Shader" id=2]
[ext_resource path="res://scripts/EnvironmentItem.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/width = 3.0
shader_param/outline_color = Color( 0.168627, 0.117647, 0.117647, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.6411, 5.56273 )

[node name="EnvironmentItem" type="Sprite"]
script = ExtResource( 3 )

[node name="ItemWithShader" type="Sprite" parent="."]
visible = false
material = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="ItemWithShader"]

[node name="CollisionRect" type="CollisionShape2D" parent="ItemWithShader/Area2D"]
visible = false
position = Vector2( -3.05788, -0.750044 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionRect" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.05788, -0.750044 )
shape = SubResource( 2 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
